@@ -1,3 +1,13 @@
+2022-02-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-ast.c (pkl_ast_sizeof_type): Add case for complete
+	unions.
+	* testsuite/poke.pkl/sizeof-14.pk: New test.
+	* testsuite/poke.pkl/sizeof-15.pk: Likewise.
+	* testsuite/poke.pkl/sizeof-16.pk: Likewise.
+	* testsuite/poke.pkl/sizeof-diag-2.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
 2022-02-02  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* cfg.mk (sc_rockdabootism_missing_space): Remove syntax-check
